flux/apps/syncthing/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name:  syncthing
  namespace: syncthing
spec:
  selector:
    app:  syncthing
  type: LoadBalancer
  ports:
    - name: web-ui
      port: 8384
      protocol: TCP
      targetPort: 8384
    - name: tcp-xfers
      port: 22000
      protocol: TCP
    - name: quic-xfers
      port: 22000
      protocol: UDP
