flux/apps/syncthing/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: syncthing
  namespace: syncthing
spec:
  parentRefs:
  - name: gateway-api
    namespace: istio-gateway
  hostnames:
    - syncthing.${GLOBAL_DOMAIN}
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: syncthing
      port: 8384
